updated task details

--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
         <p1>Doing some form of workout is good for me and I enjoying doing it, 
             this keeps me <strong>motivated</strong> and improves my <strong>strength</strong>.
              Doing workout keeps me active whole day and I can sleep better.</p1>
-
+        <hr>
+        <h3>Task: To cook scrambled eggs</h3>
+        <ol>
+            <li>Crack 6 cold eggs into a deep saucepan</li>
+            <li>Add the butter. For smaller batches, use a 2-to-1 eggs-to-butter ratio</li>
+            <li>Put the pan on high heat</li>
+            <li>Stir continuously with a rubber spatula—don't whisk—making sure to scrape the bottom of the pan</li>
+            <li>After 30 seconds</li>
+            <ol>
+                <li>Take the pan off the heat, keep stirring</li>
+                <li>After about 10 seconds, put back on the heat</li>
+                <li>Repeat above steps for 3 minutes</li>
+            </ol>
+            <li>In the last minute</li>
+            <ol>
+                <li>season the eggs lightly</li>
+                <li>For extra creamy texture, stir in 1 tsp of crème fraîche</li>
+            </ol>
+            <li>Plate and garnish with chopped chives</li>
+        </ol>
     </body>
 </html>
