updated required items for task

--- a/index.html
+++ b/index.html
@@ -28,5 +28,13 @@
             </ol>
             <li>Plate and garnish with chopped chives</li>
         </ol>
+        <h4>Required items</h4>
+        <ul>
+            <li>Eggs</li>
+            <li>Butter</li>
+            <li>Salt and pepper</li>
+            <li>Chives</li>
+            <li>Creme fraîche</li>
+        </ul>
     </body>
 </html>
