--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
             <li>Chives</li>
             <li>Creme fraîche</li>
         </ul>
-        <a href="C:\Jai\Oops\webapps-repos\webapps-s21-assignment-3-sagajayakumar\aboutme.html">link to about me</a>
+        <a href="/aboutme.html">link to about me</a>
     </body>
 </html>
