--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
             <li>Chives</li>
             <li>Creme fraîche</li>
         </ul>
-        <a href="/aboutme.html">link to about me</a>
+        <a href="https://github.com/44-563-Web-Apps-S21/webapps-s21-assignment-3-sagajayakumar/blob/main/aboutme.html">link to about me</a>
     </body>
 </html>
