updated table with places to visit

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
     <head>
         <title>Profile</title>
     </head>
+    <style>
+        table, th, td {
+          border: 1px solid black;
+          border-collapse: collapse;
+        }
+        th, td {
+          padding: 5px;
+          text-align: left;    
+        }
+        </style>
     <body>
         <h1>Jaya Kumar Saga</h1>
         <h2>Favorite activity is to workout</h2>
@@ -36,6 +46,34 @@
             <li>Chives</li>
             <li>Creme fraîche</li>
         </ul>
+        <hr>
+        <table>
+            <tr>
+                <th>Location</th>
+                <th>Hours to spend</th>
+                <th>Expenses</th>
+            </tr>
+            <tr>
+                <td>Agra, India</td>
+                <td>4 Hours</td>
+                <td> $10</td>
+            </tr>
+            <tr>
+                <td>Liberty Memorial Kansas </td>
+                <td>5 Hours</td>
+                <td> $10 - 18</td>
+            </tr>
+            <tr>
+                <td>Saint Louis Art Museum</td>
+                <td>5 Hours</td>
+                <td> Free</td>
+            </tr>
+            <tr>
+                <td>St. louis gateway arch/td>
+                <td>5 Hours</td>
+                <td> $16</td>
+            </tr>
+        </table>
         <a href="https://github.com/44-563-Web-Apps-S21/webapps-s21-assignment-3-sagajayakumar/blob/main/aboutme.html">link to about me</a>
     </body>
 </html>
