--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <li>Creme fraîche</li>
         </ul>
         <hr>
+        <h3>Places to visit</h3>
         <table>
             <tr>
                 <th>Location</th>
