--- a/index.html
+++ b/index.html
@@ -75,6 +75,32 @@
                 <td> $16</td>
             </tr>
         </table>
+        <hr>
+        <h3>Batch file</h3>
+        <blockquote cite="https://en.wikipedia.org/wiki/Batch_file">A batch file is a script file in DOS, OS/2 and Microsoft Windows.
+            It consists of a series of commands to be executed by the command-line interpreter,
+            stored in a plain text file. A batch file may contain any command the interpreter
+            accepts interactively and use constructs that enable conditional branching and looping
+            within the batch file, such as IF, FOR, and GOTO labels. The term "batch" is from batch
+            processing, meaning "non-interactive execution", though a batch file may not process a batch
+            of multiple data.</blockquote>
+        <a href="https://en.wikipedia.org/wiki/Batch_file">link to batch file description</a>
+        <pre>
+            @ECHO OFF
+            REM.-- Prepare the Command Processor
+            SETLOCAL ENABLEEXTENSIONS
+            SETLOCAL ENABLEDELAYEDEXPANSION
+
+
+            REM.-- your code goes here
+            echo.Hello World
+
+
+            REM.-- End of application
+            ECHO.&ECHO.Press any key to end the application.
+            PAUSE>NUL&GOTO:EOF
+        </pre>
+        <a href="https://www.dostips.com/DtCodeBatchFiles.php">link to sample code for batch file</a>
         <a href="https://github.com/44-563-Web-Apps-S21/webapps-s21-assignment-3-sagajayakumar/blob/main/aboutme.html">link to about me</a>
     </body>
 </html>
