--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             PAUSE>NUL&GOTO:EOF
         </pre>
         <a href="https://www.dostips.com/DtCodeBatchFiles.php">link to sample code for batch file</a>
-        <a href="https://github.com/44-563-Web-Apps-S21/webapps-s21-assignment-3-sagajayakumar/blob/main/aboutme.html">link to about me</a>
+        <br>
+        <a href="aboutme.html">link to about me</a>
     </body>
 </html>
