added link to bonus

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </style>
     <body>
         <h1>Jaya Kumar Saga</h1>
-        <a href="/bonus.html">BONUS</a>
+        <a href="bonus.html">BONUS</a>
         <h2>Favorite activity is to workout</h2>
         <p1>Doing some form of workout is good for me and I enjoying doing it, 
             this keeps me <strong>motivated</strong> and improves my <strong>strength</strong>.
