updated bonus page link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Profile</title>
+        <link rel="bonus" href="bonus.html"
     </head>
     <style>
         table, th, td {
