--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Profile</title>
-        <link rel="bonus" href="bonus.html"
+        <link rel="bonus" href= "bonus.html"> </link>
     </head>
     <style>
         table, th, td {
