--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
     <head>
         <title>Profile</title>
-        <link rel="bonus" href= "bonus.html"> </link>
     </head>
     <style>
         table, th, td {
@@ -15,6 +14,7 @@
         </style>
     <body>
         <h1>Jaya Kumar Saga</h1>
+        <a rel="bonus" href= "bonus.html">Bonus </a>
         <h2>Favorite activity is to workout</h2>
         <p1>Doing some form of workout is good for me and I enjoying doing it, 
             this keeps me <strong>motivated</strong> and improves my <strong>strength</strong>.
