--- a/bonus.html
+++ b/bonus.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Arch nemesis of Wanda-Maximoff</h1>
-        <h2>Black order</h2>
+        <h2>Black order Cat</h2>
         <p>Superhuman Strength: Black order was shown to be physically stronger than regular
         humans like Black Widow and Okoye, and also overpower both of them during the Battle of 
         Wakanda. Superhuman Durability: Black order was shown to be very durable, especially in battle.
